# gerador_de_imei

./: .dockerignore  .gitignore  .gitleaks.toml  .wranglerignore  Dockerfile  Makefile  README.md  api.py  discloud.config  docker-compose.yml  imeis_generated.txt  main.py  pyproject.toml  render.yaml  requirements.txt  run.py  tasks.md  wrangler.toml
.github/workflows/: python-app.yml
nextjs_frontend/: .env.local  Dockerfile  package.json
nextjs_frontend/.next/: trace
nextjs_frontend/.next/cache/: .tsbuildinfo
nextjs_frontend/.next/cache/webpack/client-development/: index.pack.gz.old
nextjs_frontend/.next/cache/webpack/client-production/: 1.pack  2.pack  index.pack  index.pack.old
nextjs_frontend/.next/cache/webpack/edge-server-production/: index.pack
nextjs_frontend/.next/cache/webpack/server-development/: index.pack.gz.old
nextjs_frontend/.next/cache/webpack/server-production/: 1.pack  index.pack  index.pack.old
nextjs_frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
nextjs_frontend/.next/server/app/: page.js  page_client-reference-manifest.js
nextjs_frontend/.next/server/vendor-chunks/: @swc.js  lucide-react.js  next.js
nextjs_frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
nextjs_frontend/.next/static/chunks/app/: layout.js  page.js
nextjs_frontend/.next/static/css/app/: layout.css
nextjs_frontend/.next/static/webpack/: webpack.fcb4a56958468f88.hot-update.js
nextjs_frontend/.next/static/webpack/app/: layout.fcb4a56958468f88.hot-update.js
nextjs_frontend/.next/types/app/: layout.ts  page.ts
nextjs_frontend/src/app/: layout.tsx  page.tsx
src/: api.py  main.py
src/gerador_de_imei/: __init__.py
tests/: test_api_playwright.py
