[project]
name = "gerador-de-imei"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Railson Silva", email = "railson.de.oliveira.silva.ros@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-playwright>=0.7.2",
    "slowapi>=0.1.9",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
